mongo shell creates a new .dbshell file in the current directory on windows(should be user's home directory?)

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.1.0
    • Affects Version/s: 2.0.0
    • Component/s: Shell
    • None
    • Environment:
      Windows 7 64-bit.
    • Fully Compatible
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Every time the mongo shell is started it results in a copy of .dbshell in the current working directory. This can lead to multiple copies of .dbshell in different directories. It should probably create a single copy of .dbshell in the user's home directory.

      To reproduce:

      C:\test>dir
      Volume in drive C is OS
      Volume Serial Number is 2E9C-358E

      Directory of C:\test

      09/20/2011 02:49 PM <DIR> .
      09/20/2011 02:49 PM <DIR> ..
      0 File(s) 0 bytes
      2 Dir(s) 103,552,892,928 bytes free

      C:\test>\mongodb\mongodb-win32-x86_64-2.0.0\bin\mongo.exe
      MongoDB shell version: 2.0.0
      connecting to: test
      >
      C:\test>dir
      Volume in drive C is OS
      Volume Serial Number is 2E9C-358E

      Directory of C:\test

      09/20/2011 02:49 PM <DIR> .
      09/20/2011 02:49 PM <DIR> ..
      09/20/2011 02:49 PM 0 .dbshell
      1 File(s) 0 bytes
      2 Dir(s) 103,552,892,928 bytes free

      C:\test>mkdir subdir

      C:\test>cd subdir

      C:\test\subdir>dir
      Volume in drive C is OS
      Volume Serial Number is 2E9C-358E

      Directory of C:\test\subdir

      09/20/2011 02:49 PM <DIR> .
      09/20/2011 02:49 PM <DIR> ..
      0 File(s) 0 bytes
      2 Dir(s) 103,552,892,928 bytes free

      C:\test\subdir>\mongodb\mongodb-win32-x86_64-2.0.0\bin\mongo.exe
      MongoDB shell version: 2.0.0
      connecting to: test
      >
      C:\test\subdir>dir
      Volume in drive C is OS
      Volume Serial Number is 2E9C-358E

      Directory of C:\test\subdir

      09/20/2011 02:49 PM <DIR> .
      09/20/2011 02:49 PM <DIR> ..
      09/20/2011 02:49 PM 0 .dbshell
      1 File(s) 0 bytes
      2 Dir(s) 103,552,892,928 bytes free

      C:\test\subdir>

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Robert Stam (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: