SERVER-3912: Make .dbshell file on windows be in user directory instead of current directory.